# Language-Converter

./: .gitmodules  CMakeLists.txt  README.md  config  main.cpp
ExampleCode/: main.cpp
LanguageBuilder/ConfigLoader/: ConfigLoader.cpp  ConfigLoader.h
LanguageBuilder/DataIO/: DataIO.cpp  DataIO.h
LanguageBuilder/ModuleLoader/: ModuleLoader.cpp  ModuleLoader.h
LanguageBuilder/PackageBuilder/: PackageBuilder.cpp  PackageBuilder.h
Modules/: CMakeLists.txt
PackageBuilder/: CMakeLists.txt
PackageBuilder/Modules/: CMakeLists.txt
PackageBuilder/Modules/ir/v1.0.0/: main.h
PackageBuilder/Modules/language/python/ir-v1.0.0/: CMakeLists.txt
PackageBuilder/PackageBuilder/: CMakeLists.txt  main.cpp
PackageBuilder/PackageBuilder/ConfigLoader/: ConfigLoader.cpp  ConfigLoader.h
PackageBuilder/PackageBuilder/DataIO/: DataIO.cpp  DataIO.h
PackageBuilder/PackageBuilder/ModuleLoader/: ModuleLoader.cpp  ModuleLoader.h
PackageBuilder/PackageBuilder/PackageBuilder/: PackageBuilder.cpp  PackageBuilder.h
Scripts/: main.cpp
docs/: Arch.drawio
docs/PackageBuilder/: Platform.Arch.drawio
